tests/NormalTests/paczka1/fuzzy1/20489199.err
Error in line 18: 7Me A823 2,53
Error in line 22: DpI S935 50,8
Error in line 25: DpI A823 43,6
Error in line 31: R3GS13YR S935 50,8
Error in line 27: DpI S935 38,9
Error in line 20: HtrzE S935 12,5
